# storms-and-swords

./: Cargo.toml  README.md
content/sprite_data/: character_sheet.json  foo.json  main_menu_texture.json  tileset.json
shaders/: box_shader.fs  box_shader.vs  circle_shader.fs  circle_shader.vs  full_screen_shader.fs  full_screen_shader.vs  rect_150.glslv  rect_inverse_150.glslf  rect_inverse_150.glslv  sphere_shader.fs  sphere_shader.vs  sprite_shader.fs  sprite_shader.vs  square_shader.fs  square_shader.vs
src/: frame_timer.rs  macros.rs  main.rs
src/content/: content_manifest.rs  image_loader.rs  load_content.rs  mod.rs
src/event/: event.rs
src/game/: background_controller.rs  ball.rs  battle_controller.rs  character_model.rs  component.rs  controller.rs  entity.rs  entity_model.rs  game_controller.rs  in_battle_character.rs  input.rs  main_menu_controller.rs  match_controller.rs  message_bag.rs  mod.rs  paddle.rs  player.rs  playfield_controller.rs  renderer.rs  sprite_component.rs  system.rs  tetris_block.rs  tetris_block_model.rs  ui.rs  update_trait.rs  world.rs
src/graphics/: box_renderer.rs  circle_renderer.rs  frame_renderer.rs  mod.rs  render_thread.rs  renderable.rs  renderer.rs  shaders.rs  sphere_renderer.rs  sphere_shader.rs  sprite.rs  sprite_renderer.rs  square_renderer.rs  static_sprite_trait.rs  vertex.rs
src/graphics_new/: circle_renderer.rs  renderer.rs  shaders.rs  square_renderer.rs
src/graphics_old/: mod.rs  sphere_renderer.rs  vertex.rs
src/math/: mod.rs  vector2.rs  vector3.rs
src/physics/: aabb.rs  collision.rs  mod.rs
(+4 files in other folders)
